Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Products_Subregions_Mapping__c/IB_Products_Subregions_Mapping__c.object-meta.xml
<CustomObject>
    <label>IB Products Country Attributes</label>
    <nameField>
        <label>IB Products Country Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IB Products Country Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>