Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Products_Subregions_Mapping__c/fields/IB_Product__c.field-meta.xml
<CustomField>
    <fullName>IB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IB Product</label>
    <referenceTo>IB_Product__c</referenceTo>
    <relationshipLabel>IB Products Country Attributes</relationshipLabel>
    <relationshipName>IB_Products_Region_Country_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>