Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Products_Subregions_Mapping__c/fields/Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle__c</fullName>
    <label>Lifecycle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>