Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Products_Subregions_Mapping__c/fields/Phase_1_End_Date_Months__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_End_Date_Months__c</fullName>
    <label>Early Stage (in Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>