Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Products_Subregions_Mapping__c/fields/Tier_4_P_L__c.field-meta.xml
<CustomField>
    <fullName>Tier_4_P_L__c</fullName>
    <label>Tier 4</label>
    <length>50</length>
    <type>Text</type>
</CustomField>