Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Products_Subregions_Mapping__c/fields/Tier_5_P_L__c.field-meta.xml
<CustomField>
    <fullName>Tier_5_P_L__c</fullName>
    <label>Tier 5</label>
    <length>50</length>
    <type>Text</type>
</CustomField>